# FlyMimic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
flymimic/: __init__.py
flymimic/assets/mocap/qpos/: 0001.npy  0002.npy
flymimic/assets/mocap/qvel/: 0001.npy  0002.npy
flymimic/assets/mocap/xipos/: 0001.npy  0002.npy
flymimic/assets/mocap/xivel/: 0001.npy  0002.npy
flymimic/assets/models/: best_combined_arm_cvt3.xml  best_combined_arm_damping_cvt3.xml  best_combined_arm_damping_stiff_cvt3.xml  best_combined_arm_stiff_cvt3.xml  best_combined_cvt3.xml  best_combined_cvt3_torque.xml
flymimic/assets/models/opensim/: best_combined.osim  best_combined_full.osim
flymimic/config/: eval_config.yaml  train_arm.yaml  train_arm_damp.yaml  train_arm_damp_stiff.yaml  train_arm_stiff.yaml  train_torque.yaml
flymimic/envs/: dmcontrol_wrapper.py
flymimic/evaluation/: evaluate_rollout.py
flymimic/tasks/fly/: __init__.py  mocap_tracking_muscle.py  mocap_tracking_torque.py
flymimic/train/: train_muscle.py  train_torque.py
flymimic/utils/: read_tensorboard.py
outputs/2025-11-26/18-41-05/.hydra/: hydra.yaml
outputs/2025-11-26/21-01-31/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-11-26/21-04-50/.hydra/: hydra.yaml
outputs/2025-11-26/21-06-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: collision_sim.py  contact_forces_sim.pkl  eval_rollout.py  retrain_models.sh  train_cluster.sh  train_muscle.py  train_one_seed.sh  train_seeds.sh  train_torque.py
tests/: test_assets.py  test_play_mode_rewards.py
(+75 files in other folders)
